21_5/depl_svc_clip_nopo_nginx-mtool-init.yaml
apiVersion: v1
kind: Service
metadata:
  name: w8-svc-clip
  labels:
    role: den-clip-nopo
    app: nginx-clip-nopo
    organization: netology-fops40
    creator: denskv
spec:
  type: ClusterIP
  selector:
    app: nginx-clip-nopo
  ports:
  - name: nginx
    port: 9001
    targetPort: 80
    protocol: TCP
  - name: multitool
    port: 9002
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: w8-svc-nopo
  labels:
    role: den-clip-nopo
    app: nginx-clip-nopo
    organization: netology-fops40
    creator: denskv
spec:
  type: NodePort
  selector:
    app: nginx-clip-nopo
  ports:
  - name: nginx
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mtool-init
  labels:
    role: den-clip-nopo
    app: nginx-clip-nopo
    organization: netology-fops40
    creator: denskv
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-clip-nopo
  template:
    metadata:
      labels:
        app: nginx-clip-nopo
    spec:
      containers:
      - name: nginx
        image: nginx:denskv
        imagePullPolicy: Never  # Использовать ранее использованные или выгруженные в кластер образы
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html/index.html  # полный путь монтирования для опции subPath
            subPath: index.html # Подмонтировать только index.html (для обновления пересоздать pod)
            readOnly: true
      - name: multitool
        image: wbitt/network-multitool:denskv
        imagePullPolicy: Never  # Использовать ранее использованные или выгруженные в кластер образы
        ports:
        - containerPort: 8080
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html-file
