21_5/depl_svc_clip_ingress_nginx-mtool-init.yaml
apiVersion: v1
kind: Service
metadata:
  name: w8-svc-clip
  labels:
    role: den-clip-nopo
    app: nginx-clip-ingr
    organization: netology-fops40
    creator: denskv
spec:
  type: ClusterIP
  selector:
    app: nginx-clip-ingr
  ports:
  - name: nginx
    port: 80
    targetPort: 80
    protocol: TCP
  - name: multitool
    port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  labels:
    role: den-clip-ingr
    app: nginx-clip-ingr
    organization: netology-fops40
    creator: denskv
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myapp.den.skv
    secretName: myapp-tls-secret
  rules:
  - host: myapp.den.skv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: w8-svc-clip
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mtool-init
  labels:
    role: den-clip-ingr
    app: nginx-clip-ingr
    organization: netology-fops40
    creator: denskv
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-clip-ingr
  template:
    metadata:
      labels:
        app: nginx-clip-ingr
    spec:
      containers:
      - name: nginx
        image: nginx:denskv
        imagePullPolicy: Never  # Использовать ранее использованные или выгруженные в кластер образы
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html/index.html  # полный путь монтирования для опции subPath
            subPath: index.html # Подмонтировать только index.html (для обновления пересоздать pod)
            readOnly: true
      - name: multitool
        image: wbitt/network-multitool:denskv
        imagePullPolicy: Never  # Использовать ранее использованные или выгруженные в кластер образы
        ports:
        - containerPort: 8080
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html-file
